# self-trpg

./: .gitignore  README.md  docker_startup.sh  pyproject.toml  startup.sh
chat_info_test/: chat_1.json  chat_2.json
config/: config.yaml.example
src/: Untitled.ipynb  config.py  main.py  self_trpg.ipynb  self_trpg_langchain.ipynb  utils.py
src/agents/: agent.py  role_manager.py  screenwriter.py  settlement_manager.py  story_closer.py  storyteller.py  summarizer.py
src/graph/: tools.py
src/story_info/: __init__.py  data.py
src/subpages/: chatbot_page.py  manage_story.py  new_story.py  story_view.py  story_viewa.py
src/subpages/login/: __init__.py  auth_manager.py
src/utils/: file_io.py  user_info.py  utils.py
