[tool.poetry]
name = "self-trpg"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
streamlit = "^1.37.0"
hydra-core = "^1.3.2"
streamlit-authenticator = "0.3.3"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
langchain-anthropic = "^0.1.21"
langchain-google-vertexai = "^1.0.7"
langchain-community = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
